# codigo_cirrosis

./: .gitignore  .gitmodules  Exploración Dataset Cirrosis.ipyn  LICENSE  README.md  Ruta_habilitacion_seminario_programacion.txt  Untitled.ipynb  cargar_dataset.py  pyproject.toml  test_graficos.py  verificar_valores_nulos_stage.py.txt
Codigo/: Exploración Dataset Cirrosis.ipynb  Untitled.ipynb  cargar_dataset.py  cirrosis_pipeline.py  cirrosis_pipeline_checkpoint.py  entrenamiento_modelo.ipynb  entrenamiento_modelo.py  entrenamiento_modeloV4.ipynb  install-poetry.py  modelo_completo_pipeline.joblib  preprocesador_cargado.ipynb  preprocesamiento_pipeline.joblib
Codigo/Codigo/: preprocesamiento_pipeline.joblib
Documents/MINE/: README.md
