[tool.poetry]
name = "prediccion-supervivencia-pacientes-cirrosis"
version = "0.1.0"
description = "Proyecto para predecir la supervivencia de pacientes con cirrosis"
authors = ["DJSC <johannasolermine@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.0"
scikit-learn = "^1.1.0"
joblib = "^1.1.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
